# quakevr

./: .clang-format  .gitignore  CMakeLists.txt  CUSTOM_MAPS.md  README.md  clangformat_everthing.sh  make_pak.bat  maps.md
.github/: FUNDING.yml
Id1/: bindings_knuckles.json  config.cfg
Linux/sgml/: Quakespasm.sgml
Misc/: authmdl_offsets.cfg  fitzquake080.txt
QC/: ai.qc  ai_ammoresist.qc  ai_combat.qc  ai_explosion.qc  ai_gibs.qc  ai_minions.qc  ai_pathcorner.qc  ai_subs.qc  boss.qc  breakable.qc  builtins.qc  buttons.qc  client.qc  combat.qc  defs.qc  demon.qc  dog.qc  doors.qc  dpextensions.qc  enforcer.qc  estate.qc  fight.qc  fish.qc  fteqcc.ini  grapple.qc  hip_brk.qc  hip_clock.qc  hip_count.qc  hip_decoy.qc  hip_defs.qc  hip_expl.qc  hip_holes.qc  hip_items.qc  hip_misc.qc  hip_mon_arma.qc  hip_mon_grem.qc  hip_mon_scrge.qc  hip_mon_spike.qc  hip_part.qc  hip_push.qc  (+168 more)
QC/frikbot/: bot.qc  bot_ai.qc  bot_ed.qc  bot_fight.qc  bot_misc.qc  bot_move.qc  bot_phys.qc  bot_way.qc
QC/waypoints/: map_dm2.qc  map_dm3.qc
QC_arcane/: ai_ammoresist.qc  ai_gibs.qc  client_camera.qc  client_mapvar.qc  defs.qc  func.qc  func_buttons.qc  func_pswitch.qc  func_trains.qc  hiprot.qc  misc.qc  mon_bosseidolon.qc  mon_bossidchthon.qc  mon_bossxxshub.qc  mon_dlord.qc  mon_eel.qc  mon_fish.qc  mon_freddie.qc  mon_gargoyle.qc  mon_minotaur.qc  mon_shambler.qc  mon_spider.qc  mon_swampling.qc  mon_tarbaby.qc  mon_voreling.qc  mon_wizard.qc  mon_wraith.qc  mon_zombie.qc  mon_zombiek.qc  part_emitter.qc  projectiles.qc  settings.qc  subs.qc  weapons.qc  world.qc
QC_copper/: constants.qc  defs.qc  explobox.qc  fog.qc  fx.qc  m_hknight.qc  m_oldone.qc  m_shalrath.qc  m_zombie.qc  maths.qc  monsters.qc  plats.qc  sound.qc  test.qc  w_axe.qc  w_lightning.qc  walls.qc
QC_hipnotic/: AI.QC  AMTEST.QC  BUTTONS.QC  CLIENT.QC  COMBAT.QC  DEFS.QC  DOG.QC  DOORS.QC  ENFORCER.QC  FIGHT.QC  FISH.QC  FLAG.QC  HIPARMA.QC  HIPCLOCK.QC  HIPCOUNT.QC  HIPDECOY.QC  HIPDEFS.QC  HIPGREM.QC  HIPHOLES.QC  HIPITEMS.QC  HIPMISC.QC  HIPMODEL.QC  HIPQUAKE.QC  HIPROT.QC  HIPRUBBL.QC  HIPSCRGE.QC  HIPSPAWN.QC  HIPSPIKE.QC  HIPSPR.QC  HIPTRAIN.QC  HIPTRIG.QC  HIP_BRK.QC  HIP_EXPL.QC  HIP_PART.QC  HIP_PUSH.QC  HKNIGHT.QC  ITEMS.QC  JCTEST.QC  KNIGHT.QC  MISC.QC  (+17 more)
QC_keep/: ai_checkattack.qc  ai_enemytarget.qc  ai_fly.qc  ai_gibs.qc  ai_gibskeep.qc  ai_pathcorner.qc  ai_subs.qc  ai_wyrm.qc  client_power.qc  defsclass.qc  defscustom.qc  defsdrake.qc  defshipnotic.qc  defsrubicon.qc  drake_armor.qc  drake_fire.qc  earthq.qc  elevatr.qc  estate.qc  func_doors.qc  func_doorsecret.qc  fx_drake.qc  fx_nehahra.qc  hip_part.qc  hiprot.qc  hiprubbl.qc  mathlib.qc  misc_globalstate.qc  misc_keep.qc  misc_textbook.qc  mon_anaconda.qc  mon_armagon.qc  mon_axegrunt.qc  mon_bandit.qc  mon_bane.qc  mon_bossfiretop.qc  mon_bossicegolem.qc  mon_deathguard.qc  mon_demon.qc  mon_dknight.qc  (+35 more)
QC_original/: ai.qc  amtest.qc  boss.qc  client.qc  combat.qc  defs.qc  demon.qc  dog.qc  doors.qc  enforcer.qc  fight.qc  flag.qc  hknight.qc  items.qc  jctest.qc  knight.qc  misc.qc  models.qc  monsters.qc  ogre.qc  oldone.qc  plats.qc  player.qc  shalrath.qc  shambler.qc  soldier.qc  subs.qc  triggers.qc  weapons.qc  wizard.qc  world.qc  zombie.qc
QC_rogue/: AI.QC  COMBAT.QC  DEMON.QC  DMATCH.QC  DOORS.QC  ELEVATR.QC  ENFORCER.QC  FIGHT.QC  FIGHT.QC.bak  FISH.QC  GRAPPLE.QC  HKNIGHT.QC  KNIGHT.QC  LAVAMAN.QC  LAVA_WPN.QC  LIGHTNIN.QC  MISC.QC  MONSTERS.QC  MORPH.QC  MULT_WPN.QC  NEWITEMS.QC  NEWPLATS.QC  OLDONE.QC  PENDULUM.QC  PLAYER.QC  PROGS.SRC  SHAMBLER.QC  SHIELD.QC  SOLDIER.QC  SPHERE.QC  TEAMPLAY.QC  WEAPONS.QC  WIZARD.QC  WORLD.QC  WRATH.QC  ZOMBIE.QC  rogue_to_merge.md
Quake/: anorm_dots.hpp  anorms.hpp  arch_def.hpp  areanode.hpp  bgmusic.cpp  bgmusic.hpp  bspfile.hpp  byteorder.cpp  byteorder.hpp  cd_null.cpp  cd_sdl.cpp  cdaudio.hpp  cfgfile.cpp  cfgfile.hpp  chase.cpp  cl_demo.cpp  cl_input.cpp  cl_main.cpp  cl_parse.cpp  cl_tent.cpp  client.cpp  client.hpp  cmd.cpp  cmd.hpp  cmd_types.hpp  common.cpp  common.hpp  console.cpp  console.hpp  crc.cpp  crc.hpp  cvar.cpp  cvar.hpp  debug_menu.cpp  debug_menu.hpp  debugprint.hpp  developer.cpp  developer.hpp  draw.hpp  edict.hpp  (+212 more)
ReleaseFiles/: actions.json  bindings_cosmos.json  bindings_generic.json  bindings_holographic.json  bindings_knuckles.json  bindings_touch.json  bindings_vive.json  quakevr-debug-novr.bat  quakevr-novr.bat
Windows/: CMakeLists.txt
Windows/SDL2/include/: SDL_stdinc.h
Windows/VisualStudio/: quakespasm-sdl2.vcproj  quakespasm-sdl2.vcxproj  quakespasm-sdl2.vcxproj.filters  quakespasm.sln  quakespasm.vcproj  quakespasm.vcxproj  quakespasm.vcxproj.filters
Windows/codecs/include/: mad.h
Windows/glew/auto/extensions/gl/: WGL_EXT_create_context_es2_profile
Windows/glew/auto/src/: glewinfo.rc
map_src/: quakelogovr.tga  testvr.map  vrfiringrange.map  vrstart-crash.map  vrstart-crash.txt  vrstart.bak.map  vrstart.bak2.map  vrstart.bsp  vrstart.map  vrstart.pts  vrtutorial.map
models/: arm_axe_separated.blend  arm_axe_separated.blend1  beam.mdl  finger_index.mdl  finger_middle.mdl  finger_pinky.mdl  finger_ring.mdl  finger_thumb.mdl  g_laserg.mdl  g_prox.mdl  g_shot.mdl  g_shot0.mdl  grenade.blend  grenade.mdl  hand.blend  hand.mdl  hand_004.blend  hand_and_fingers.blend  hand_base.mdl  hand_db.blend  hand_new.blend  hand_new.blend1  hand_new.mdl  hand_new_tweaked.blend  handnew.blend  hook.mdl  lasergun.blend  lasergun.blend1  lasergun.mdl  lasrspik.blend  lasrspik.blend1  lasrspik.mdl  legholster.blend  legholster.mdl  mervup.mdl  openhand.blend  openhand.mdl  player.blend  player.blend1  player.mdl  (+71 more)
old/: Quakespasm.html  asan_trace_svplayer_bug.txt  asancrash0.txt  config1.cfg  config10.cfg  config11.cfg  config12.cfg  config2.cfg  config3.cfg  config4.cfg  config5.cfg  config6.cfg  config7.cfg  config8.cfg  config9.cfg  cvar_and_offsets.md  old_r_part.cpp  oldrecursivehullcheck.cpp  pak12.old.pak  progdefs.h.old  quaternion_tests.cpp  scratchpad.cpp  svphystestse2m6liftbug.cpp  wip.glsl
webpage/: quakevr.html  quakevr_unminified.html
(+442 files in other folders)
